--- a/sick-fits/frontend/package.json
+++ b/sick-fits/frontend/package.json
@@ -11,7 +11,7 @@
     "test-win": "SET NODE_ENV=test&& jest --watch",
     "heroku-postbuild": "next build"
   },
-  "author": "",
+  "author": "Owen Liverside",
   "license": "ISC",
   "dependencies": {
     "apollo-boost": "^0.1.16",
